fix(pinterest): better pin Profile label colors/contrast

--- a/styles/pinterest/catppuccin.user.less
+++ b/styles/pinterest/catppuccin.user.less
@@ -451,6 +451,15 @@
     [data-test-id^="closeup-image"] div div {
       background-color: @mantle !important;
     }
+
+    button[data-test-id="PinBetterSaveDropdown"] {
+      div[title="Profile"], svg {
+        color: if(@flavor = latte, var(--color-text-inverse), @text) !important;
+      }
+      .G0a div[title="Profile"], .G0a svg {
+        color: var(--color-text-inverse) !important;
+      }
+    }
     
     // pin icons
     button[data-test-id="feedback-button"],
